config/isvpoc/isvpoc/force-app/main/default/objects/AWS_Q_Connector_Details__mdt/AWS_Q_Connector_Details__mdt.object-meta.xml
<CustomObject>
    <description>This stores the configuration details required to make the AWS Q call.</description>
    <label>AWS Q Connector Detail</label>
    <pluralLabel>AWS Q Connector Details</pluralLabel>
</CustomObject>