config/isvpoc/isvpoc/force-app/main/default/objects/AWS_Q_Connector_Details__mdt/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <description>Stores the API Endpoint of the chatSync API</description>
    <inlineHelpText>Provide the complete end point for chat sync api</inlineHelpText>
    <label>endpoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>