config/isvpoc/isvpoc/force-app/main/default/objects/AWS_Q_Connector_Details__mdt/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <description>Stores the list of headers which needs to be passed into the HTTPS Call.</description>
    <inlineHelpText>Provide the Key and Value in the below notation.
Key1:Value1 , Key2:Value2</inlineHelpText>
    <label>Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>