config/isvpoc/isvpoc/force-app/main/default/objects/AWS_Q_Connector_Details__mdt/fields/HTTP_Method__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Method__c</fullName>
    <description>Holds the HTTP Method type.</description>
    <inlineHelpText>Provide the HTTP Method, ex: POST</inlineHelpText>
    <label>HTTP Method</label>
    <type>TextArea</type>
</CustomField>