config/isvpoc/isvpoc/force-app/main/default/objects/AWS_Q_Connector_Details__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>Stores the timeout value of the chat sync api</description>
    <inlineHelpText>Provide the HTTPS Timeout. Ex : 30000</inlineHelpText>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>